Don't stop time in GUI (optionally)

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -264,6 +264,9 @@ use magic item animations = false
 # Don't use race weight in NPC movement speed calculations
 normalise race speed = false
 
+# Pause game in inventory and other game menus
+pause = true
+
 [General]
 
 # Anisotropy reduces distortion in textures at low angles (e.g. 0 to 16).
