--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -23,7 +23,7 @@ small feature culling pixel size = 2.0
 
 # Maximum visible distance. Caution: this setting
 # can dramatically affect performance, see documentation for details.
-viewing distance = 7168.0
+viewing distance = 2048.0
 
 # Camera field of view in degrees (e.g. 30.0 to 110.0).
 # Does not affect the player's hands in the first person camera.
@@ -448,13 +448,13 @@ radial fog = false
 grab cursor = true
 
 # Key controlling sneak toggles setting instead of being held down.
-toggle sneak = false
+toggle sneak = true
 
 # Player is running by default.
 always run = false
 
 # Camera sensitivity when not in GUI mode. (>0.0, e.g. 0.1 to 5.0).
-camera sensitivity = 1.0
+camera sensitivity = 0.4
 
 # Vertical camera sensitivity multiplier when not in GUI mode.
 # (>0.0, Because it's a multiplier values should be near 1.0)
